--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,20 @@
 <resources>
     <!-- App name -->
-    <string name="app_name">Tip Time</string>
+    <string name="app_name">Currency Calculator</string>
 
-    <!-- Hint text for editable text field where the user enters the cost of service -->
-    <string name="cost_of_service">Cost of Service</string>
+    <string name="amount_to_convert">Amount to convert</string>
+    <string name="choose_currency">Choose a currency to convert to</string>
+    <string name="dollars">Dollars ($)</string>
+    <string name="pounds">Pounds (£)</string>
+    <string name="euros">Euros (€)</string>
+    <string name="bitcoin">Bitcoin (₿)</string>
 
-    <!-- Question prompt for the group of radio buttons with different tip options -->
-    <string name="how_was_the_service">How was the service?</string>
+    <!-- Text label for toggle switch that asks the user if they want to round up the conversion  -->
+    <string name="round_up_conversion">Round up conversion?</string>
 
-    <!-- Tip option for amazing service which uses 20% to calculate the tip  -->
-    <string name="amazing_service">Amazing (20%)</string>
-
-    <!-- Tip option for good service which uses 18% to calculate the tip  -->
-    <string name="good_service">Good (18%)</string>
-
-    <!-- Tip option for okay service which uses 16% to calculate the tip  -->
-    <string name="ok_service">Okay (15%)</string>
-
-    <!-- Text label for toggle switch that asks the user if they want to round up the tip  -->
-    <string name="round_up_tip">Round up tip?</string>
-
-    <!-- Label for button that calculates the tip  -->
-    <string name="calculate">Calculate</string>
+    <!-- Label for button that calculates the conversion  -->
+    <string name="convert">Convert</string>
 
     <!-- Formatted string for the tip result  -->
-    <string name="tip_amount">Tip Amount: %s</string>
+    <string name="amount">Amount: %s</string>
 </resources>
